fix overlapping with nav

--- a/src/app/components/MainNavigation/main-nav.scss
+++ b/src/app/components/MainNavigation/main-nav.scss
@@ -1,6 +1,7 @@
 .main-nav {
   padding: 25px 0;
   background-color: #e4e2dd;
+  z-index: 99;
   .nav-logo {
     height: 40px;
     margin-left: -30px;
